--- a/one-way-anova.ipynb
+++ b/one-way-anova.ipynb
@@ -1144,7 +1144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All analyses were performed using the Mann-Whitney U test as non of independent variable met the assumptions crucial for using parametrical tests. \n",
+    "All analyses were performed using the Mann-Whitney U test as none of independent variables met the assumptions crucial for using parametrical tests. \n",
     "The results show that whether a student works or not does not affect their GPA. However, the type of study (part-time or full-time) does have an impact on the GPA, with part-time students achieving slighlty higher grades than full-time students. Lastly, gender does not seem to have a significant effect on GPA."
    ]
   }
