--- a/correspondence-analysis.ipynb
+++ b/correspondence-analysis.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_excel(\"/Users/Nikola/Desktop/Projekty/Studenci/Analysis-of-student/dataset.xlsx\")"
+    "dataset = pd.read_excel(\"../Projekty/Studenci/Analysis-of-student/dataset.xlsx\")"
    ]
   },
   {
