--- a/correspondence-analysis.ipynb
+++ b/correspondence-analysis.ipynb
@@ -42,14 +42,14 @@
     "<li>1 - Country</li>\n",
     "<li>2 - Small town</li>\n",
     "<li>3 - Medium city</li>\n",
-    "<li>4 - Big city</li>\n",
+    "<li>4 - Big city</li> <br>\n",
     "\n",
     "<u>Physical activity:</u>\n",
     "<li>0 - no physical activity</li>\n",
     "<li>1 - once a week</li>\n",
     "<li>2 - twice a week</li>\n",
     "<li>3 - thee times a week</li>\n",
-    "<li>4 - more than three times a week</li>\n",
+    "<li>4 - more than three times a week<br></li>\n",
     "\n",
     "As we dispose a relatively small amount of data, authors decided to reduce amount of levels of physical activity to:\n",
     "<li>0 - no physical activity</li>\n",
