--- a/correspondence-analysis.ipynb
+++ b/correspondence-analysis.ipynb
@@ -49,7 +49,7 @@
     "<li>1 - once a week</li>\n",
     "<li>2 - twice a week</li>\n",
     "<li>3 - thee times a week</li>\n",
-    "<li>4 - more than three times a week<br></li>\n",
+    "<li>4 - more than three times a week</li><br>\n",
     "\n",
     "As we dispose a relatively small amount of data, authors decided to reduce amount of levels of physical activity to:\n",
     "<li>0 - no physical activity</li>\n",
